--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,16 @@
-# TODO
+version: '3.8'
 
+services:
+  ai:
+    build:
+      context: ai
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    #volumes:
+    #  - ./ai:/app
+    networks:
+      - tarantula
 
+networks:
+  tarantula:
