--- a/ai/Dockerfile
+++ b/ai/Dockerfile
@@ -4,6 +4,8 @@ FROM python:3.13 as python-base
 ENV POETRY_VERSION=2.0.0
 ENV POETRY_HOME=/opt/poetry
 ENV POETRY_VENV=/opt/poetry-venv
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # Tell Poetry where to place its cache and virtual environment
 ENV POETRY_CACHE_DIR=/opt/.cache
@@ -33,8 +35,6 @@ COPY . /app
 # Install Dependencies
 RUN poetry install --no-interaction --no-cache
 
-
 # Run Application
 EXPOSE 5000
-# CMD ["tail", "-f", "/dev/null"]
-CMD [ "poetry", "run", "python", "-m", "fastapi", "run", "--host", "0.0.0.0", "--port", "5000" ]
+CMD [ "poetry", "run", "python", "-m", "fastapi", "run", "--host", "0.0.0.0", "--port", "5000", "--reload"]
