--- a/compose.yaml
+++ b/compose.yaml
@@ -7,8 +7,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    #volumes:
-    #  - ./ai:/app
+    volumes:
+      - ./ai:/app
     networks:
       - tarantula
 
