--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,8 @@ services:
     build:
       context: ai
       dockerfile: Dockerfile
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     ports:
       - "5000:5000"
     volumes:
