--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "fastapi[standard] (>=0.115.10,<0.116.0)"
+    "fastapi[standard] (>=0.115.10,<0.116.0)",
+    "uuid7 (>=0.1.0,<0.2.0)"
 ]
 package-mode = false
 
