--- a/compose.yaml
+++ b/compose.yaml
@@ -14,5 +14,38 @@ services:
     networks:
       - tarantula
 
+  postgres-db:
+    image: postgres
+    container_name: postgres-db
+    restart: always
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: radomDB
+    ports:
+      - "5432:5432"
+    networks:
+      - tarantula
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  backend:
+    build:
+      context: backend
+      dockerfile: Dockerfile
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/radomDB
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=password
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres-db
+    networks:
+      - tarantula
+
 networks:
   tarantula:
+
+volumes:
+  postgres_data:
