--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:postgresql://localhost:5432/radomDB
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/radomDB
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update                
+spring.jpa.show-sql=true
 spring.datasource.hikari.pool-name=HikariCP
