--- a/compose.yaml
+++ b/compose.yaml
@@ -15,12 +15,12 @@ services:
       - tarantula
 
   postgres-db:
-    image: postgres
-    container_name: postgres-db
-    restart: always
+    image: postgres:17
+    container_name: ${CONTAINER_NAME}
+    restart: unless-stopped
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: radomDB
     ports:
       - "5432:5432"
@@ -35,8 +35,8 @@ services:
       dockerfile: Dockerfile
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/radomDB
-      - SPRING_DATASOURCE_USERNAME=user
-      - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
+      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - "8080:8080"
     depends_on:
