--- a/compose.yaml
+++ b/compose.yaml
@@ -44,6 +44,17 @@ services:
     networks:
       - tarantula
 
+  frontend:
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    networks:
+      - tarantula
+
 networks:
   tarantula:
 
