--- a/compose.yaml
+++ b/compose.yaml
@@ -15,12 +15,12 @@ services:
       - tarantula
 
   postgres-db:
-    image: postgres
-    container_name: postgres-db
-    restart: always
+    image: postgres:17
+    container_name: ${CONTAINER_NAME}
+    restart: unless-stopped
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: radomDB
     ports:
       - "5432:5432"
@@ -28,6 +28,7 @@ services:
       - tarantula
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
 
   backend:
     build:
