--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,19 +16,20 @@
     "lightweight-charts": "^5.0.3",
     "next": "15.2.0",
     "next-pwa": "^5.6.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.10",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.10",
     "typescript": "^5"
   }
 }
