--- a/compose.yaml
+++ b/compose.yaml
@@ -53,6 +53,8 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    volumes:
+      - ./frontend:/app
     networks:
       - tarantula
 
