--- a/.github/workflows/docker-healthcheck.yml
+++ b/.github/workflows/docker-healthcheck.yml
@@ -5,14 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+      - name: Init .env
+        run: cp .env.example .env
       - name: Start Docker Compose services
         run: docker compose up -d
 
       - name: Check service health
         uses: jaracogmbh/docker-compose-health-check-action@v1.0.0
         with:
-          max-retries: 12
+          max-retries: 6
           retry-interval: 5
           compose-file: "compose.yaml"
           skip-exited: "false"
