--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - BACKEND_API_URL=${BACKEND_API_URL}
     ports:
       - "5000:5000"
     volumes:
@@ -28,7 +29,6 @@ services:
       - tarantula
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
 
   backend:
     build:
@@ -60,6 +60,7 @@ services:
 
 networks:
   tarantula:
+
 
 volumes:
   postgres_data:
