--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 OPENAI_API_KEY=<provide your API key there>
-CONTAINER_NAME=postgres-db
+BACKEND_API_URL=<provide backend url>
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
+ALPHA_VANTAGE_API_KEY=<provide your API key there>
+ALPHA_VANTAGE_URL=https://www.alphavantage.co/query
