--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
