--- a/compose.yaml
+++ b/compose.yaml
@@ -54,13 +54,13 @@ services:
       - backend
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend_node_modules:/app/node_modules
     networks:
       - tarantula
 
 networks:
   tarantula:
 
-
 volumes:
   postgres_data:
+  frontend_node_modules:
