--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,7 +30,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
     implementation 'org.flywaydb:flyway-core:11.3.4'
+    implementation 'org.jsoup:jsoup:1.19.1'
+    implementation 'org.json:json:20250107'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'io.github.cdimascio:dotenv-java:3.2.0'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.18.3'
     runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.3.4'
     implementation 'org.postgresql:postgresql'
     runtimeOnly 'org.postgresql:postgresql'
