--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "fastapi[standard] (>=0.115.10,<0.116.0)",
     "uuid7 (>=0.1.0,<0.2.0)",
     "openai (>=1.65.4,<2.0.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "typer (>=0.15.2,<0.16.0)"
 ]
 package-mode = false
 
