--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,19 @@
     "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
     "lightweight-charts": "^5.0.3",
+    "lodash": "^4.17.21",
     "next": "15.2.0",
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-spinners": "^0.15.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.10",
+    "@types/lodash": "^4.17.16",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
