--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "lightweight-charts": "^5.0.3",
     "lodash": "^4.17.21",
     "next": "15.2.0",
+    "next-auth": "^5.0.0-beta.25",
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
