feat(backend): add users and authentication

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,4 @@ OPENAI_API_KEY=<provide your API key there>
 BACKEND_API_URL=<provide backend url>
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-ALPHA_VANTAGE_API_KEY=<provide your API key there>
-ALPHA_VANTAGE_URL=https://www.alphavantage.co/query
+JWT_SECRET=<provide jwt secret>
