--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-spinners": "^0.15.0",
     "zustand": "^5.0.3"
   },
