feat(backend): add profiles to fetching articles

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ BACKEND_API_URL=<provide backend url>
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 JWT_SECRET=<provide jwt secret>
+ARTICLE_SCHEDULER_FIXED_RATE=<provide fixed rate>
+ARTICLE_SCHEDULER_CRON=<provide cron>
+SPRING_PROFILES_ACTIVE=<provide environment profile>
