--- a/compose.yaml
+++ b/compose.yaml
@@ -32,10 +32,13 @@ services:
       context: backend
       dockerfile: Dockerfile
     environment:
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/radomDB
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - JWT_SECRET=${JWT_SECRET}
+      - ARTICLE_SCHEDULER_FIXED_RATE=${ARTICLE_SCHEDULER_FIXED_RATE}
+      - ARTICLE_SCHEDULER_CRON=${ARTICLE_SCHEDULER_CRON}
     ports:
       - "8080:8080"
     depends_on:
