feat(ai): alternative LLM providers

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,19 @@
-OPENAI_API_KEY=<provide your API key there>
-BACKEND_API_URL=<provide backend url>
+# --- AI ---
+OPENAI_API_KEY=
+GEMINI_API_KEY=
+OPENROUTER_API_KEY= 
+ANTHROPIC_API_KEY=
+NEWS_IMPACT_LLM=openai/gpt-4o
+# openai/gpt-4o
+# google/gemini-2.0-flash
+# anthropic/claude-3-7-sonnet-20250219
+# openrouter/<some-model>
+COMMAND_PARSE_LLM=openai/gpt-4o-mini
+BACKEND_API_URL=http://backend:8080
+MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE=10
+
+
+# --- Backend ---
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 JWT_SECRET=<provide jwt secret>
