--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "uuid7 (>=0.1.0,<0.2.0)",
     "openai (>=1.65.4,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "typer (>=0.15.2,<0.16.0)"
+    "typer (>=0.15.2,<0.16.0)",
+    "google-genai (>=1.14.0,<2.0.0)",
+    "anthropic (>=0.51.0,<0.52.0)"
 ]
 package-mode = false
 
