fix: .env.example defaults

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,14 @@ MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE=10
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 JWT_SECRET=<provide jwt secret>
-ARTICLE_SCHEDULER_FIXED_RATE=<provide fixed rate>
-ARTICLE_SCHEDULER_CRON=<provide cron>
-SPRING_PROFILES_ACTIVE=<provide environment profile>
+# When should new articles be fetched?
+# - (dev) run each ARTICLE_SCHEDULER_FIXED_RATE miliseconds
+# by default 10 minutes (10 * 60 * 1000)
+ARTICLE_SCHEDULER_FIXED_RATE=600000
+# - (prod) run according to ARTICLE_SCHEDULER_CRON 
+# by default daily at 8:00 AM
+ARTICLE_SCHEDULER_CRON="0 0 8 * * *"
+
+# Set the backend profile 
+# dev/test/prod
+SPRING_PROFILES_ACTIVE=dev
