feat(ai): add LLMUsage to count input_tokens, output_tokens

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ NEWS_IMPACT_LLM=openai/gpt-4o
 # openai/gpt-4o
 # google/gemini-2.0-flash
 # anthropic/claude-3-7-sonnet-20250219
-# openrouter/<some-model>
+# openrouter/openai/gpt-4o
 COMMAND_PARSE_LLM=openai/gpt-4o-mini
 BACKEND_API_URL=http://backend:8080
 MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE=10
