feat(ai): alternative configurations for news analysis

--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,7 @@ services:
       - COMMAND_PARSE_LLM=${COMMAND_PARSE_LLM}
       - BACKEND_API_URL=${BACKEND_API_URL}
       - MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE=${MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE}
+      - NEWS_IMPACT_VARIANT=${NEWS_IMPACT_VARIANT}
     ports:
       - "5000:5000"
     volumes:
