--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ NEWS_IMPACT_LLM=openai/gpt-4o
 COMMAND_PARSE_LLM=openai/gpt-4o-mini
 BACKEND_API_URL=http://backend:8080
 MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE=10
+NEWS_IMPACT_VARIANT=DEFAULT_COT
 
 
 # --- Backend ---
