feat(ai): use rabbitmq + dramatiq for queue persistence
resolves #83

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ COMMAND_PARSE_LLM=openai/gpt-4o-mini
 BACKEND_API_URL=http://backend:8080
 MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE=10
 NEWS_IMPACT_VARIANT=DEFAULT_COT
+RABBITMQ_USER=krolikmq
+RABBITMQ_PASSWORD=pytanie_czyp4jak1zj4daj4kr0liki
 
 
 # --- Backend ---
