--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "typer (>=0.15.2,<0.16.0)",
     "google-genai (>=1.14.0,<2.0.0)",
-    "anthropic (>=0.51.0,<0.52.0)"
+    "anthropic (>=0.51.0,<0.52.0)",
+    "dramatiq[rabbitmq,watch] (>=1.17.1,<2.0.0)"
 ]
 package-mode = false
 
