--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,12 @@ NEWS_IMPACT_LLM=openai/gpt-4o
 # openrouter/openai/gpt-4o
 COMMAND_PARSE_LLM=openai/gpt-4o-mini
 BACKEND_API_URL=http://backend:8080
+# Limit number of stocks processed per article
 MAXIMUM_STOCKS_TO_PROCESS_PER_ARTICLE=10
 NEWS_IMPACT_VARIANT=DEFAULT_COT
 RABBITMQ_USER=krolikmq
 RABBITMQ_PASSWORD=pytanie_czyp4jak1zj4daj4kr0liki
+REDIS_PASSWORD=ptasznik_goliat_moglby_dac_rade_z_krolikiem
 
 
 # --- Backend ---
