--- a/compose.yaml
+++ b/compose.yaml
@@ -136,10 +136,28 @@ services:
       - tarantula
     expose:
       - "6379"
+      
+  # --- MODIFIED: Renamed for clarity and removed the second ngrok service ---
+  ngrok:
+    image: ngrok/ngrok:latest
+    container_name: ngrok # Simplified name
+    depends_on:
+      - frontend
+    ports:
+      - "4040:4040"
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+    command:
+      # This single tunnel points to the frontend service
+      - "http"
+      - "frontend:3000"
+      - "--log=stdout"
+      - "--host-header=rewrite"
+    networks:
+      - tarantula
 
 networks:
   tarantula:
-
 
 volumes:
   postgres_data:
