chore(backend, frontend): Cleanup

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,7 @@ ARTICLE_SCHEDULER_CRON="0 0 8 * * *"
 # Set the backend profile 
 # dev/test/prod
 SPRING_PROFILES_ACTIVE=dev
+
+# --- Frontend ---
+FRONTEND_API_URL=http://backend:8080
+
