--- a/.github/workflows/docker-healthcheck.yml
+++ b/.github/workflows/docker-healthcheck.yml
@@ -7,6 +7,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Init .env
         run: cp .env.example .env
+      - name: Init compose
+        run: cp compose.local.yaml compose.yaml
       - name: Start Docker Compose services
         run: docker compose up -d
 
