--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -70,7 +70,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - BACKEND_URL=${FRONTEND_API_URL}
-      - AUTH_SECRET=${AUTH_SECRET}
+      - AUTH_SECRET=${JWT_SECRET}
     expose:
       - "3000"
     depends_on:
