--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,4 +47,5 @@ jobs:
           script: |
             cd /var/www/app
             sudo git pull
+            sudo cp compose.prod.yaml compose.yaml
             sudo docker compose up -d --build
