feat(frontend): Add voice recognition support

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,11 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
+    "extendable-media-recorder": "^9.2.26",
+    "lamejs": "^1.2.1",
     "lightweight-charts": "^5.0.3",
     "lodash": "^4.17.21",
+    "mic-recorder-to-mp3": "^2.2.2",
     "next": "15.2.0",
     "next-auth": "^5.0.0-beta.25",
     "next-pwa": "^5.6.0",
@@ -27,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-media-recorder": "^1.7.1",
     "react-spinners": "^0.15.0",
     "zustand": "^5.0.3"
   },
