fix(deploy): improve cd script

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,6 +46,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd /var/www/app
-            sudo git pull
-            sudo cp compose.prod.yaml compose.yaml
-            sudo docker compose up -d --build
+            sudo git pull && sudo cp compose.prod.yaml compose.yaml && sudo docker compose up -d --build
