--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Your app name",
-  "short_name": "App short name",
+  "name": "Nice news",
+  "short_name": "Nice news",
   "theme_color": "#001220",
   "background_color": "#001220",
   "display": "standalone",
@@ -11,19 +11,9 @@
   "apple-mobile-web-app-status-bar-style": "black",
   "icons": [
     {
-      "src": "/icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "/icon-256x256.png",
-      "type": "image/png",
-      "sizes": "256x256"
-    },
-    {
-      "src": "/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/icons/logo.svg",
+      "type": "image/svg+xml",
+      "sizes": "192x192 256x256 512x512"
     }
   ]
 }
