chore(frontend): Update manifest and metadata

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Nice news",
-  "short_name": "Nice news",
+  "name": "NICE News",
+  "short_name": "NICE News",
   "theme_color": "#001220",
   "background_color": "#001220",
   "display": "standalone",
